<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.combah.dindin2.viewmodel.MovementEditViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.MovementActivity">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.date}"
            tools:text="5/1/2016"
            android:id="@+id/button4"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioGroup
            android:id="@+id/type_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/button4"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/button4">

            <RadioButton
                android:id="@+id/button_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:checked="@={!viewModel.income}" />

            <RadioButton
                android:id="@+id/button_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_marginStart="16dp"
                android:checked="@={viewModel.income}" />

        </RadioGroup>

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@={viewModel.description}"
            app:layout_constraintLeft_toLeftOf="@+id/type_selector"
            app:layout_constraintTop_toBottomOf="@+id/type_selector"
            app:layout_constraintRight_toRightOf="@+id/type_selector" />

        <EditText
            android:id="@+id/value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="numberDecimal"
            android:text="@={viewModel.valueString}"
            app:layout_constraintRight_toRightOf="@+id/description"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintLeft_toLeftOf="@+id/description" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/save_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value" />


    </android.support.constraint.ConstraintLayout>
</layout>
